--- a/Primeiros Passos/paragrafos e quebras de linha.html
+++ b/Primeiros Passos/paragrafos e quebras de linha.html
@@ -9,8 +9,10 @@
 <body>
     <h1> Paragrafos e quebras de linhas </h1>
     <hr>
-    <p>Se você quiser escrever um parágrafo voce pode usar as tags: <br> &lt;p&gt; e &lt;/p&gt; </p>
-    <P>Se precisar quebrar o texto em algum lugar especifico <br> como esse, você pode usar a tag &lt;br &gt; 
+    <p>Se você quiser escrever um parágrafo voce pode usar as tags: <br> &lt;p&gt; e &lt;/p&gt;. <!--LESS THAN | GREATER THAN--> 
+    </p>
+
+    <P>Se precisar quebrar o texto em algum lugar especifico <br> como esse, você pode usar a tag &lt;br &gt;. 
     </P>
     
 </body>
