--- a/Primeiros Passos/simbolos e emojis.html
+++ b/Primeiros Passos/simbolos e emojis.html
@@ -4,9 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Adicinando simbolos e emojis</title>
 </head>
 <body>
-    
+    <h1>Adicinando simbolos e emoji</h1>
+    <p> Para colocar símbolos basta digitar: & e o nome do simbolo<br> 
+        &reg;
+        &copy;
+        &uparrow;
+        &delta;
+        &updownarrow;
+    </p>
+    <h2>Adicionando emojis: 
+    </h2>    
+    <p>Para colocar basta digitar & em seguida 'x' o codigo do emoji pega do na emojipidia:
+         <br>
+        &#x1F4BB;
+        
+    </p>
 </body>
 </html>
