--- a/Primeiros Passos/005 - Hierarquia de Títulos/hierarqui de titulos.html
+++ b/Primeiros Passos/005 - Hierarquia de Títulos/hierarqui de titulos.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <title>HIERARQUIA DE TITULOS </title>
 </head>
 <body>
+    <h1>Título H1</h1>
+    <h2>Titulo H2</h2>
+    <h3>Titulo T3</h3>
+    <h4>Título H4</h4>
     
 </body>
 </html>
