Update hierarqui de titulos.html

--- a/Primeiros Passos/005 - Hierarquia de Títulos/hierarqui de titulos.html
+++ b/Primeiros Passos/005 - Hierarquia de Títulos/hierarqui de titulos.html
@@ -8,10 +8,14 @@
     <title>HIERARQUIA DE TITULOS </title>
 </head>
 <body>
-    <h1>Título H1</h1>
+    <h1>Título H1 - O maximo da hierarquia é ate H6</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed cum omnis soluta in, officiis aperiam delectus rem iusto deserunt laborum nostrum, voluptates, pariatur illum officia! Corrupti enim modi ipsum sunt!</p>
     <h2>Titulo H2</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim dolorum, aperiam corporis iusto, delectus voluptate dolor labore vero non laboriosam, incidunt repudiandae ut iste ipsum expedita eum ducimus sit soluta.</p>
     <h3>Titulo T3</h3>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Beatae nemo fugit, saepe delectus quae magni minima consequatur voluptatem ratione distinctio! Commodi, cupiditate! Nam ex commodi, quod maiores magnam possimus corrupti!</p>
     <h4>Título H4</h4>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Numquam deleniti ipsum id dolores voluptates, unde ea, a sit doloremque assumenda voluptatem veritatis odio! Ratione dolorum, fuga dolores voluptate deserunt adipisci?</p>
     
 </body>
 </html>
