--- a/Primeiros Passos/005 - Hierarquia de Títulos/hierarquia de titulos.html
+++ b/Primeiros Passos/005 - Hierarquia de Títulos/hierarquia de titulos.html
@@ -16,6 +16,7 @@
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Beatae nemo fugit, saepe delectus quae magni minima consequatur voluptatem ratione distinctio! Commodi, cupiditate! Nam ex commodi, quod maiores magnam possimus corrupti!</p>
     <h4>Título H4</h4>
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Numquam deleniti ipsum id dolores voluptates, unde ea, a sit doloremque assumenda voluptatem veritatis odio! Ratione dolorum, fuga dolores voluptate deserunt adipisci?</p>
+    <h5>Titulo H5</h5>
     
 </body>
 </html>
