Update hierarquia de titulos.html

--- a/Primeiros Passos/005 - Hierarquia de Títulos/hierarquia de titulos.html
+++ b/Primeiros Passos/005 - Hierarquia de Títulos/hierarquia de titulos.html
@@ -17,6 +17,7 @@
     <h4>Título H4</h4>
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Numquam deleniti ipsum id dolores voluptates, unde ea, a sit doloremque assumenda voluptatem veritatis odio! Ratione dolorum, fuga dolores voluptate deserunt adipisci?</p>
     <h5>Titulo H5</h5>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Pariatur corporis ut ipsam nobis debitis repudiandae officia ab ducimus quibusdam, facere delectus voluptas a dolor quisquam nostrum, obcaecati dicta iusto inventore?</p>
     
 </body>
 </html>
