--- a/Primeiros Passos/006 - Semântica/semantica.html
+++ b/Primeiros Passos/006 - Semântica/semantica.html
@@ -7,6 +7,10 @@
     <title>SEMÂNTICA NO HTML</title>
 </head>
 <body>
+    <h1>HTML5 Foca em significado e não forma <br>a forma é feita pelo css.</h1>
+    <p>Adicionando endereço: 
+        <address>Rua nova esperança</address>
+    </p>
     
 </body>
 </html>
