--- a/Primeiros Passos/006 - Semântica/semantica.html
+++ b/Primeiros Passos/006 - Semântica/semantica.html
@@ -5,6 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SEMÂNTICA NO HTML</title>
+    <style>
+        body{
+            background-color: rgb(0, 238, 255);
+
+        }
+    </style>
 </head>
 <body>
     <h1>HTML5 Foca em significado e não forma <br>a forma é feita pelo css.</h1>
