--- a/Primeiros Passos/006 - Semântica/semantica.html
+++ b/Primeiros Passos/006 - Semântica/semantica.html
@@ -7,7 +7,7 @@
     <title>SEMÂNTICA NO HTML</title>
     <style>
         body{
-            background-color: rgb(0, 238, 255);
+            background-color: rgb(0, 238, 255);  /*cod to color*/
 
         }
     </style>
@@ -15,7 +15,7 @@
 <body>
     <h1>HTML5 Foca em significado e não forma <br>a forma é feita pelo css.</h1>
     <p>Adicionando endereço: 
-        <address>Rua nova esperança</address>
+        <address>Rua nova esperança</address> <!-- Cod for adress-->
     </p>
     
 </body>
