--- a/Primeiros Passos/007 - Formatação de texto/formataçãodetexto.html
+++ b/Primeiros Passos/007 - Formatação de texto/formataçãodetexto.html
@@ -7,6 +7,9 @@
     <title>Formatação de texto</title>
 </head>
 <body>
+    <h1>Principais formatações</h1>
+    <h2>Negrito</h2>
+    <p>Pa</p>
     
 </body>
 </html>
