--- a/Primeiros Passos/007 - Formatação de texto/formataçãodetexto.html
+++ b/Primeiros Passos/007 - Formatação de texto/formataçãodetexto.html
@@ -7,9 +7,18 @@
     <title>Formatação de texto</title>
 </head>
 <body>
-    <h1>Principais formatações</h1>
+    <h1>Principais Formatações</h1>
     <h2>Negrito</h2>
-    <p>Pa</p>
+        <p>Temos 2 formas para deixar o texto em negrito: <br>
+    <h3>1ª Forma semantica aplicando &lt;strong&gt;</h3>
+    <strong> Primeiro exemplo</strong>
+    <h3>2ª Forma (não sematica) aplicando tag &lt;b&gt;   
+    </h3>
+    <b>Segundo exemplo</b>
+    </p>
+    <h2> Italico</h2><p>Temos 2 formas para deixar o texto em negrito: <br> </p>
+    <h3>1ªForma não semântica</h3>
+
     
 </body>
 </html>
