--- a/Primeiros Passos/007 - Formatação de texto/formataçãodetexto.html
+++ b/Primeiros Passos/007 - Formatação de texto/formataçãodetexto.html
@@ -6,18 +6,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formatação de texto</title>
 </head>
-<body>
     <h1>Principais Formatações</h1>
-    <h2>Negrito</h2>
-        <p>Temos 2 formas para deixar o texto em negrito: <br>
-    <h3>1ª Forma semantica aplicando &lt;strong&gt;</h3>
-    <strong> Primeiro exemplo</strong>
-    <h3>2ª Forma (não sematica) aplicando tag &lt;b&gt;   
-    </h3>
-    <b>Segundo exemplo</b>
+    <h2>NEGRITO</h2>
+    <p>Temos 2 formas para deixar o texto em negrito:</p>
+    <p>1ª Forma semantica aplicando &lt;strong&gt;</p>
+Está frase tem um termo em negrit:o<strong> Primeiro exemplo</strong> (Semantico)
+    <p>2ª Forma (não sematica) aplicando tag &lt;b&gt;   
     </p>
-    <h2> Italico</h2><p>Temos 2 formas para deixar o texto em negrito: <br> </p>
-    <h3>1ªForma não semântica</h3>
+   Está frase tem um termo negrito <b>Segundo exemplo</b> (não semântico)
+    <h2> ITALICO</h2>
+    <p> Temos 2 formas para deixar o texto em ITALICA:</p> 
+    <p>1ªForma não semântica</p>
+    <P> <i>Termo em italico</i></P>
+    <p>2ª Forma semantica aplicando tag &lt;em&gt;</p>
+    <em>Termo em italico</em>
+    <h2>TEXTO SUBLINHADO</h2>
+    <P>Ultilizaremos a tag &lt;ins&gt; <ins>Termo sublinhado</ins></P>
+    <h2>TEXTO DELETADO COM TRAÇO</h2>
+    <p>Ultilizaremos a tag &lt;del&gt;</p> <del>Termo DELETADO</del>
+    <h2>TEXTO SOBRESCRITO</h2>
+    Para inserir coisas do tipo a<sup>2</sup> = b<sup>2</sup>+c <sup>2</sup>   
+    <h2>TEXTO SUBSCRITO</h2>
+    <p>Exemplo: H<sub>2</sub>O</p>
+
 
     
 </body>
