--- a/Primeiros Passos/008 - Outras formatações/outras formatações.html
+++ b/Primeiros Passos/008 - Outras formatações/outras formatações.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>OUTRAS FORMATAÇÕES</title>
     <H1>Código Fonte</H1>
-    <p>O comando <code>document class="getElementebyId"</code></document></p>
+    <p>O comando <code>document.getElementebyId</code> é escrito em JS</p>
 </head>
 <body>
     
