--- a/Primeiros Passos/008 - Outras formatações/outras formatações.html
+++ b/Primeiros Passos/008 - Outras formatações/outras formatações.html
@@ -8,6 +8,16 @@
     <H1>Código Fonte</H1>
 <body>
     <p>O comando <code>document.getElementebyId</code> é escrito em JS </p>
+    <p>Codigo em python <br></p>
+    <p> 
+        <code>
+        n = input(int('Digite um numero:'))
+            if n % 2 == 0:
+                print('Este é um numero par')
+            else:
+                Print('não é um numero par')
+    </code>
+    </p>
     
 </body>
 </html>
