--- a/Primeiros Passos/008 - Outras formatações/outras formatações.html
+++ b/Primeiros Passos/008 - Outras formatações/outras formatações.html
@@ -4,20 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>OUTRAS FORMATAÇÕES</title>
-    <H1>Código Fonte</H1>
+    <title></title>
+    <H1>OUTRAS FORMATAÇÕES</H1>
+    <h2>Codigo fonte / Pre - formatação </h2>
 <body>
     <p>O comando <code>document.getElementebyId</code> é escrito em JS </p>
-    <p>Codigo em python <br></p>
+    <!--usando comando code para monoespaçar-->
+    <p>Codigo em python: <br></p>
     <p> 
+    <pre>
         <code>
-        n = input(int('Digite um numero:'))
+            n = input(int('Digite um numero:'))
             if n % 2 == 0:
-                print('Este é um numero par')
+                print(f' O numero {n} é par')
             else:
-                Print('não é um numero par')
-    </code>
+                Print(f'O numero {n} é impar')
+            </code> <!--Condigo pre formatado-->
+    </pre>
     </p>
+    <h2>Citações</h2>
     
 </body>
 </html>
