--- a/Primeiros Passos/008 - Outras formatações/outras formatações.html
+++ b/Primeiros Passos/008 - Outras formatações/outras formatações.html
@@ -19,7 +19,7 @@
                 print(f' O numero {n} é par')
             else:
                 Print(f'O numero {n} é impar')
-            </code> <!--Condigo pre formatado-->
+            </code> <!--Codigo pre formatado-->
     </pre>
     </p>
     <h2>Citações </h2>
