--- a/Primeiros Passos/008 - Outras formatações/outras formatações.html
+++ b/Primeiros Passos/008 - Outras formatações/outras formatações.html
@@ -22,8 +22,13 @@
             </code> <!--Código pre formatado-->
     </pre>
     </p>
-    <h2>Citações </h2>
-    <p></p>
-    
+    <h2>Citações Simples</h2>
+    <p> Utiliza-se uma tag de citação:
+        segundo Einstein: <q>existem duas coisas infinitas, o universo e a estupidez humana</q></p>
+    <h2>Citações Completas (direta)</h2>
+    <p>Segundo Stephen Hawking:</p>
+    <blockquote cite="https://www.frasesfamosas.com.br/s-livro/uma-breve-historia-do-tempo/">Uma teoria é considerada boa se satisfaz dois requisitos: descreve de forma adequada um grande número de observações com base em um modelo que contém apenas poucos elementos arbitrários e faz previsões precisas sobre os resultados de futuras observações.</blockquote>  
+    <h2>Abreviações</h2>
+    <p>Estou estudando <abbr title="Hyper text markup language">HTML</abbr> e <abbr title="Cascading Style Sheets">CSS</abbr></p>
 </body>
 </html>
