--- a/Primeiros Passos/009 - Listas/listas.html
+++ b/Primeiros Passos/009 - Listas/listas.html
@@ -10,14 +10,15 @@
     <H1>Apredendo listas</H1>
     <h2>Listas Ordenadas</h2>
     <p>Seguindo passa a passo de pra ligar pc</p>
-    <ol> <!--ol é tag para listas ordenasdas-->
+    <ol type=""> <!--ol é tag para listas ordenasdas-->
         <li> Aperta no botão de ligar</li> <!--a tag li é cada item da lista-->
         <li> Esperar ligar</li>
         <li> Clicar no espaço pra senha</li>
         <li> Colocar a senha</li>
-
-
     </ol>
+    <em>
+        <p>obs: odemos personalizar o tipo de lista adicionando a tag de type </p>
+    </em>
     
 </body>
 </html>
