--- a/Primeiros Passos/009 - Listas/listas.html
+++ b/Primeiros Passos/009 - Listas/listas.html
@@ -10,15 +10,25 @@
     <H1>Apredendo listas</H1>
     <h2>Listas Ordenadas</h2>
     <p>Seguindo passa a passo de pra ligar pc</p>
-    <ol type=""> <!--ol é tag para listas ordenasdas-->
+    <!--ol é tag para listas ordenasdas-->
+    <ol type="1"> <!--tipos = A 1 a I i-->
         <li> Aperta no botão de ligar</li> <!--a tag li é cada item da lista-->
         <li> Esperar ligar</li>
         <li> Clicar no espaço pra senha</li>
         <li> Colocar a senha</li>
     </ol>
     <em>
-        <p>obs: odemos personalizar o tipo de lista adicionando a tag de type </p>
+        <p>obs: podemos personalizar o tipo de lista adicionando a tag de type </p>
     </em>
+    <h2>Listas não ordenadas</h2>
+    <!--ul tag de uma sinalização de lista com um simbolo-->
+    <ul> 
+        <li>celular</li>
+        <li>pc</li>
+        <li>relógio</li>
+        <li>tablet</li>
+
+    </ul>
     
 </body>
 </html>
