--- a/Primeiros Passos/009 - Listas/listas.html
+++ b/Primeiros Passos/009 - Listas/listas.html
@@ -27,7 +27,7 @@
         <li>pc</li>
         <li>relógio</li>
         <li>tablet</li>
-        <li></li>
+        <li>Note</li>
     </ul>
     
 </body>
