--- a/Primeiros Passos/009 - Listas/listas.html
+++ b/Primeiros Passos/009 - Listas/listas.html
@@ -29,6 +29,17 @@
         <li>tablet</li>
         <li>Notebook</li>
     </ul>
+    <h2> Juntando listas.Exemplos com linguagnes </h2>
+    <ol>
+        <li>Antigas</li>
+        <ol type="a">
+            <li>clipper</li>
+            <li>fortran</li>
+            <li>delphin</li>
+        </ol>
+        <li>Novas</li>
+        
+    </ol>
     
 </body>
 </html>
