--- a/Primeiros Passos/009 - Listas/listas.html
+++ b/Primeiros Passos/009 - Listas/listas.html
@@ -4,13 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LISTAS</title>
-    <style>
-        body{
-
-            background-color: rgb(56, 255, 195);
-        }
-        
+    <title>LISTAS</title>        
     </style>
 </head>
 <body>
@@ -51,6 +45,15 @@
             <li>javascript </li>
         </ol>
     </ol>
+    <h2>Lista de definições </h2>
+    <dl>
+        <dt>HTML</dt>
+        <dd>Linguagem de  marcação</dd>
+        <dt>CSS</dt>
+        <dd>Linguagem pra design de um site</dd>
+        <dt>Javascript</dt>
+        <dd>liguagen de programação para interação</dd>
+    </dl>
     
 </body>
 </html>
