--- a/Primeiros Passos/010 - links/index.html
+++ b/Primeiros Passos/010 - links/index.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>TRABALHANDO COM LINKS</title>
 </head>
 <body>
-    
+    <H1>Usando links</H1>
+    <p>Acessando link do <a href="https://github.com/RuanSampaio-code">meu repositório no  GitHub.</a> <em>obs- nesse modo se comportará abrindo o link sobrepondo o seu site</em></p>
+    <p>Acessando com link externo ultilize: &lt; a href="http://" target="_blank" rel="noopener noreferrer">&lt;/a &gt; </p>
+    <p>Acessando meu github <a href="https://github.com/RuanSampaio-code" target="_blank" rel="external"> Aqui </a>
 </body>
 </html>
