--- a/Primeiros Passos/010 - links/index.html
+++ b/Primeiros Passos/010 - links/index.html
@@ -8,8 +8,13 @@
 </head>
 <body>
     <H1>Usando links</H1>
-    <p>Acessando link do <a href="https://github.com/RuanSampaio-code">meu repositório no  GitHub.</a> <em>obs- nesse modo se comportará abrindo o link sobrepondo o seu site</em></p>
-    <p>Acessando com link externo ultilize: &lt; a href="http://" target="_blank" rel="noopener noreferrer">&lt;/a &gt; </p>
-    <p>Acessando meu github <a href="https://github.com/RuanSampaio-code" target="_blank" rel="external"> Aqui </a>
+    <h2>Link Sobrepodo seu site</h2>
+    <ul>
+    <p>Acessando link do <a href="https://github.com/RuanSampaio-code">meu repositório no  GitHub.</a> <em>obs- nesse modo se comportará abrindo o link sobrepondo o seu site</em></p></ul>
+    <h2>Link exeterno </h2><ul>
+        
+        <p>Acessando com link externo ultilize: &lt; a href="http://" target="_blank" rel="noopener noreferrer">&lt;/a &gt; </p>
+        <body>Acessando meu github <a href="https://github.com/RuanSampaio-code" target="_blank" rel="external"> Aqui. </a></body> <em>Obs:nesse caso clicando aqiu levará para um link externo.</em>
+    </ul>
 </body>
 </html>
