--- a/Primeiros Passos/010 - links/index.html
+++ b/Primeiros Passos/010 - links/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <H1>Usando links</H1>
-    <h2>Link Sobrepodo seu site</h2>
+    <h2>Link Sobrepondo seu site</h2>
     <ul>
     
     <li>
@@ -19,5 +19,6 @@
         <p>Acessando com link externo ultilize: &lt; a href="http://" target="_blank" rel="noopener noreferrer">&lt;/a &gt; </p>
         <body>Acessando meu github <a href="https://github.com/RuanSampaio-code" target="_blank" rel="external"> Aqui. </a></body> <em>Obs:nesse caso clicando aqui levará para um link externo.</em>
     </ul>
+    <h2>Links externos</h2>
 </body>
 </html>
