--- a/Primeiros Passos/010 - links/index.html
+++ b/Primeiros Passos/010 - links/index.html
@@ -20,5 +20,6 @@
         <body>Acessando meu github <a href="https://github.com/RuanSampaio-code" target="_blank" rel="external"> Aqui. </a></body> <em>Obs:nesse caso clicando aqui levará para um link externo.</em>
     </ul>
     <h2>Links externos</h2>
+    <p>Está é a primeira pagina do site. Clique <a href="pag2.html" rel="next">Aqui </a> para ir pra segunda página</p>
 </body>
 </html>
