--- a/Primeiros Passos/010 - links/noticias/pag3.html
+++ b/Primeiros Passos/010 - links/noticias/pag3.html
@@ -10,7 +10,7 @@
     <h1>bem vindo 3 pagina do site</h1>
     <p>Para voltar a primeira pagina Clique
         <a href="../index.html"> AQUI</a>
-        <EM>obs: a pagina 3 está em pasta interna sozinha, en para acessar a a pagina 1, devemos acresentar ../ no inicio do enderoço da url na tag &lt; a &gt; </EM>
+        <EM>obs: a pagina 3 está em pasta interna sozinha, e para acessar a  pagina 1, devemos acresentar '../' no inicio do endereço da url na tag &lt; a &gt; </EM>
     </p>
     
 </body>
