--- a/Primeiros Passos/010 - links/pag2.html
+++ b/Primeiros Passos/010 - links/pag2.html
@@ -9,7 +9,8 @@
 <body>
     <h1>Segunda página</h1>
     <h2>Bem vindo a segunda pagina</h2>
-    <p>Clique <a href="index.html" rel="prev">Aqui</a> Para voltar para segunda página</p>
+    <p>Clique <a href="index.html" rel="prev">Aqui</a> Para voltar para Primeira página</p>
+    <p>Clique <a href="noticias/pag3.html" rel="next"> Aqui </a> para ir para proxima pagina </p>
 
     
 </body>
