--- a/Primeiros Passos/010 - links/index.html
+++ b/Primeiros Passos/010 - links/index.html
@@ -21,5 +21,6 @@
     </ul>
     <h2>Links externos</h2>
     <p>Está é a primeira pagina do site. Clique <a href="pag2.html" rel="next">Aqui </a> para ir pra segunda página</p>
+    <h2>Links para Download</h2>
 </body>
 </html>
