--- a/Primeiros Passos/010 - links/index.html
+++ b/Primeiros Passos/010 - links/index.html
@@ -22,5 +22,8 @@
     <h2>Links externos</h2>
     <p>Está é a primeira pagina do site. Clique <a href="pag2.html" rel="next">Aqui </a> para ir pra segunda página</p>
     <h2>Links para Download</h2>
+    <ul>
+        <li><a href="livros/certifica quarentena dev.pdf" download="certificado quarentena dev.pdf" type="aplication/pdf">Baixar certificado </a></li>
+    </ul>
 </body>
 </html>
