--- a/Primeiros Passos/Desafios/d01.html
+++ b/Primeiros Passos/Desafios/d01.html
@@ -7,7 +7,7 @@
     <title>About me</title>
 </head>
 <body>
-    <h1>Ola a todos meu nome é joser Ruan</h1>
+    <h1>Ola a todos meu nome é Josée Ruan</h1>
     
 </body>
 </html>
