--- a/Primeiros Passos/Desafios/d01.html
+++ b/Primeiros Passos/Desafios/d01.html
@@ -7,7 +7,7 @@
     <title>About me</title>
 </head>
 <body>
-    <h1>Ola a todos meu nome é Josée Ruan</h1>
-    
+    <h1>Ola a todos meu nome é José Ruan</h1>
+    <p>Atuamente estou fazendo o curso de Ciencia e tecnologia com enfase em engenharia da computação</p>
 </body>
 </html>
