--- a/Primeiros Passos/Desafios/d01.html
+++ b/Primeiros Passos/Desafios/d01.html
@@ -8,6 +8,13 @@
 </head>
 <body>
     <h1>Ola a todos meu nome é José Ruan</h1>
-    <p>Atuamente estou fazendo o curso de Ciencia e tecnologia com enfase em engenharia da computação</p>
+    <p>Atuamente estou fazendo o curso de Ciência e tecnologia com enfase em engenharia da computação</p>
+    <p>As liguagens que atualmente estou apredendo são: </p>
+    <ul>
+        <li><abbr title="Linguagem de marcação de texto"> HTML </Html></abbr></li>
+        <li><abbr title="Styllo"> CSS</abbr></li>
+        <li><abbr title="python">python</abbr></li>
+    </ul>
+
 </body>
 </html>
