--- a/Primeiros Passos/011 - imagens dinamicas/index.html
+++ b/Primeiros Passos/011 - imagens dinamicas/index.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <tie>IMAGENS DINAMICAS</tie>
+    <title>Imagens dinâmicas</title>
 </head>
 <body>
-    <P>Manipule o tmanho da</P>
+    <h1>Repositividades de imagens na tela</h1>
+    <hr>
+    <p>Manipule a o tamanho da tela do navegador para ver a dinamica da imagem</p>
     
 </body>
 </html>
