--- a/Primeiros Passos/011 - imagens dinamicas/index.html
+++ b/Primeiros Passos/011 - imagens dinamicas/index.html
@@ -10,6 +10,10 @@
     <h1>Repositividades de imagens na tela</h1>
     <hr>
     <p>Manipule a o tamanho da tela do navegador para ver a dinamica da imagem</p>
-    
+    <picture>
+        <source media="(max-width: 1000px)" srcset="imagem/foto-m.png" type="image/png">
+        <img src="imagem/foto-g.png" alt="">
+
+    </picture>
 </body>
 </html>
