--- a/Primeiros Passos/011 - imagens dinamicas/index.html
+++ b/Primeiros Passos/011 - imagens dinamicas/index.html
@@ -9,9 +9,10 @@
 <body>
     <h1>Repositividades de imagens na tela</h1>
     <hr>
-    <p>Manipule a o tamanho da tela do navegador para ver a dinamica da imagem</p>
+    <p><strong>Manipule a o tamanho da tela do navegador para ver a dinamica da imagem</strong>:</p>
     <picture>
-        <source media="(max-width: 1000px)" srcset="imagem/foto-m.png" type="image/png">
+        <source media="(max-width: 700px )" srcset="imagem/foto-p.png" type="image/png">
+        <source media="(max-width: 1050px)" srcset="imagem/foto-m.png" type="image/png">
         <img src="imagem/foto-g.png" alt="">
 
     </picture>
