--- a/Primeiros Passos/011 - Midia imagem dinamica e audio/index.html
+++ b/Primeiros Passos/011 - Midia imagem dinamica e audio/index.html
@@ -14,7 +14,10 @@
         <source media="(max-width: 750px )" srcset="imagem/foto-p.png" type="image/png">
         <source media="(max-width: 1050px)" srcset="imagem/foto-m.png" type="image/png">
         <img src="imagem/foto-g.png" alt="">
-
     </picture>
+
+    <h1>Adicinando audio</h1>
+    <hr>
+    <p>Apredendo a colocar audio no HTML5</p>
 </body>
 </html>
