--- a/Primeiros Passos/011 - Midia imagem dinamica e audio/index.html
+++ b/Primeiros Passos/011 - Midia imagem dinamica e audio/index.html
@@ -19,5 +19,6 @@
     <h1>Adicinando audio</h1>
     <hr>
     <p>Apredendo a colocar audio no HTML5</p>
+    <audio src=""></audio>
 </body>
 </html>
