--- a/Primeiros Passos/011 - Midia imagem dinamica e audio/index.html
+++ b/Primeiros Passos/011 - Midia imagem dinamica e audio/index.html
@@ -16,7 +16,7 @@
         <img src="imagem/foto-g.png" alt="">
     </picture>
 
-    <h1>Adicinando audio</h1>
+    <h1>Adicinando audios </h1>
     <hr>
     <p>Apredendo a colocar audio no HTML5</p>
     <audio src=""></audio>
