--- a/Primeiros Passos/011 - Midia imagem dinamica e audio/index.html
+++ b/Primeiros Passos/011 - Midia imagem dinamica e audio/index.html
@@ -16,9 +16,9 @@
         <img src="imagem/foto-g.png" alt="">
     </picture>
 
-    <h1>Adicinando audios </h1>
+    <h1>Adicinando áudios </h1>
     <hr>
-    <p>Apredendo a colocar audio no HTML5</p>
-    <audio src=""></audio>
+    <p> a colocar áudio no HTML5:</p>
+    <audio src="midia/rockmusic.mp3" controls autoplay></audio>
 </body>
 </html>
