--- a/Primeiros Passos/011 - Midia imagem dinamica e audio/index.html
+++ b/Primeiros Passos/011 - Midia imagem dinamica e audio/index.html
@@ -16,9 +16,10 @@
         <img src="imagem/foto-g.png" alt="">
     </picture>
 
-    <h1>Adicinando áudios </h1>
+    <h1> ADD mp3</h1> </h1>
     <hr>
-    <p> a colocar áudio no HTML5:</p>
-    <audio src="midia/rockmusic.mp3" controls autoplay></audio>
+    <p> Learning to put audio in HTML5:</p>
+    <audio src="midia/rockmusic.mp3" controls ></audio>
+
 </body>
 </html>
