--- a/Primeiros Passos/011 - Midia imagem dinamica e audio/index.html
+++ b/Primeiros Passos/011 - Midia imagem dinamica e audio/index.html
@@ -21,6 +21,12 @@
     <h2>First Form</h2>
     <p> Learning to put audio in HTML5:</p>
     <audio src="midia/rockmusic.mp3" controls ></audio>
+    <h2>Second Form</h2>
+    <audio>
+        <source src="midia/rockmusic.mp3" type="audio/mpeg"> 
+        <source src="midia/rockmusic.ogg" type="audio/ogg">
+
+    </audio>
 
 </body>
 </html>
