--- a/Primeiros Passos/011 - Midia imagem dinamica e audio/index.html
+++ b/Primeiros Passos/011 - Midia imagem dinamica e audio/index.html
@@ -22,9 +22,10 @@
     <p> Learning to put audio in HTML5:</p>
     <audio src="midia/rockmusic.mp3" controls ></audio>
     <h2>Second Form</h2>
-    <audio>
+    <audio controls>
         <source src="midia/rockmusic.mp3" type="audio/mpeg"> 
         <source src="midia/rockmusic.ogg" type="audio/ogg">
+        <source src="midia/rockmusic.wave" type="audio/wave">
 
     </audio>
 
