--- a/Primeiros Passos/011 - Midia imagem dinamica e audio/index.html
+++ b/Primeiros Passos/011 - Midia imagem dinamica e audio/index.html
@@ -16,7 +16,7 @@
         <img src="imagem/foto-g.png" alt="">
     </picture>
 
-    <h1> ADD mp3</h1> </h1>
+    <h1> Add mp3</h1> </h1>
     <hr>
     <h2>First Form</h2>
     <p> Learning to put audio in HTML5:</p>
@@ -28,6 +28,7 @@
         <source src="midia/rockmusic.wave" type="audio/wave">
     </audio>
     <p>Para baixar a musica clique <a href="midia/rockmusic.mp3" download="rockmusic.mp3" type="audio/mp3"> AQUI </a></p>
+    <h2></h2>
 
 </body>
 </html>
