--- a/Primeiros Passos/011 - Midia imagem dinamica e audio/index.html
+++ b/Primeiros Passos/011 - Midia imagem dinamica e audio/index.html
@@ -28,7 +28,8 @@
         <source src="midia/rockmusic.wave" type="audio/wave">
     </audio>
     <p>Para baixar a musica clique <a href="midia/rockmusic.mp3" download="rockmusic.mp3" type="audio/mp3"> AQUI </a></p>
-    <h1>Adicionando vidos</h1>
+    <h1>Adicionando videos</h1>
+
 
 </body>
 </html>
