--- a/Primeiros Passos/011 - Midia imagem dinamica e audio/index.html
+++ b/Primeiros Passos/011 - Midia imagem dinamica e audio/index.html
@@ -29,6 +29,13 @@
     </audio>
     <p>Para baixar a musica clique <a href="midia/rockmusic.mp3" download="rockmusic.mp3" type="audio/mp3"> AQUI </a></p>
     <h1>Adicionando videos</h1>
+    <h2>Os formatos mais aceitos pelos navegadores são: </h2>
+    <ul>
+        <li>MP4</li>
+        <LI>MP4V</LI>
+        <LI>WEBM</LI>
+        <LI>OGV</LI>
+    </ul>
 
 
 </body>
