--- a/Primeiros Passos/011 - Midia imagem dinamica e audio/index.html
+++ b/Primeiros Passos/011 - Midia imagem dinamica e audio/index.html
@@ -36,6 +36,12 @@
         <LI>WEBM</LI>
         <LI>OGV</LI>
     </ul>
+    <h2>Dicas nesse capítulo </h2>
+    <ul>
+        <li>gimp - formatação de imagens</li>
+        <li>Pexel - imagens e video </li>
+    </ul>
+
 
 
 </body>
