--- a/Primeiros Passos/011 - Midia imagem dinamica e audio/index.html
+++ b/Primeiros Passos/011 - Midia imagem dinamica e audio/index.html
@@ -39,7 +39,8 @@
     <h2>Dicas nesse capítulo </h2>
     <ul>
         <li>gimp - formatação de imagens</li>
-        <li>Pexel - imagens e video </li>
+        <li>Pexel - imagens e videos sem direitos autorais</li>
+        <li>HandBroke - Programa para conversão de formatos de vídeos</li>
     </ul>
 
 
