--- a/Primeiros Passos/011 - Midia imagem dinamica e audio/index.html
+++ b/Primeiros Passos/011 - Midia imagem dinamica e audio/index.html
@@ -38,7 +38,7 @@
     </ul>
     <h2>Dicas nesse capítulo </h2>
     <ul>
-        <li>GIMP - formatação de imagens</li>
+        <li>GIMP - programa para formatação de imagens</li>
         <li>Pexel - imagens e videos sem direitos autorais</li>
         <li>HandBroke - Programa para conversão de formatos de vídeos</li>
     </ul>
