--- a/Primeiros Passos/012 - Videos/video.html
+++ b/Primeiros Passos/012 - Videos/video.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +7,21 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>Adicionando videos</h1>
+    <h2>Os formatos mais aceitos pelos navegadores são: </h2>
+    <ul>
+        <li>MP4</li>
+        <LI>MP4V</LI>
+        <LI>WEBM</LI>
+        <LI>OGV</LI>
+    </ul>
+    <h2>Dicas nesse capítulo </h2>
+    <ul>
+        <li>GIMP - programa para   formatação de imagens</li>
+        <li>Pexel - imagens e videos sem direitos autorais</li>
+        <li>HandBroke - Programa para conversão de formatos de vídeos</li>
+
+    </ul>
     
 </body>
 </html>
