--- a/Primeiros Passos/012 - Videos/video.html
+++ b/Primeiros Passos/012 - Videos/video.html
@@ -15,6 +15,19 @@
         <LI>WEBM</LI>
         <LI>OGV</LI>
     </ul>
+    <h2>Importando video localmente</h2>
+    
+    <video controls width="450"> <!--width é controle de tamanho-->
+        <source src="midia/World - 1992.mp4" type="video/mp4">
+        <source src="midia/World - 1992-1.webm" type="video/webm">
+        <source src="midia/World - 1992-1.mkv" type="video/mkv">
+        <source src="midia/World-1992.ogv" type="video/ogv">
+    </video>
+
+    <p>aqui foi colocando varios source com varios formnatos de video</p>
+
+
+
     <h2>Dicas nesse capítulo </h2>
     <ul>
         <li>GIMP - programa para   formatação de imagens</li>
