--- a/Primeiros Passos/012 - Videos/video.html
+++ b/Primeiros Passos/012 - Videos/video.html
@@ -17,14 +17,21 @@
     </ul>
     <h2>Importando video localmente</h2>
     
-    <video controls width="450"> <!--width é controle de tamanho-->
+    <video width="450" poster="imagens/Frame 1 (1).png" controls > <!--width é controle de largura; -->
         <source src="midia/World - 1992.mp4" type="video/mp4">
         <source src="midia/World - 1992-1.webm" type="video/webm">
         <source src="midia/World - 1992-1.mkv" type="video/mkv">
         <source src="midia/World-1992.ogv" type="video/ogv">
+        <p>Seu navegdor não tem compatibilidade</p>
     </video>
 
-    <p>aqui foi colocando varios source com varios formnatos de video</p>
+    <p>Aqui foi colocando varios source com varios formnatos de video</p>
+    <h3>Tag adicionadas</h3>
+    <ul>
+        <li>'width' para largura do video</li>
+        <li>'Poster' para adicionar na tumbnail do video</li>
+        <li>'video', 'source' e 'src' para adicionar o video</li>
+    </ul>
 
 
 
