--- a/Primeiros Passos/012 - Videos/video.html
+++ b/Primeiros Passos/012 - Videos/video.html
@@ -39,6 +39,7 @@
         <li>Pexel - imagens e videos sem direitos autorais</li>
         <li>HandBroke - Programa para conversão de formatos de vídeos</li>
     </ul>
-    <h2>Importando videos externamente</h2>
+    <h2>Importando videos externamente (Youtube)</h2>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/2iaPuUFIyMo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </body>
 </html>
