--- a/Primeiros Passos/012 - Videos/video.html
+++ b/Primeiros Passos/012 - Videos/video.html
@@ -39,7 +39,18 @@
         <li>Pexel - imagens e videos sem direitos autorais</li>
         <li>HandBroke - Programa para conversão de formatos de vídeos</li>
     </ul>
-    <h2>Importando videos externamente (Youtube)</h2>
+    <h2>Importando videos externamente </h2>
+    <p>No caso dos videos colocadods externamente utilizamos a opção de compartilhar do video e clicamos na opção de incorporar e la aparece um codigo em html para adicionarmos. </p>
+    <h3>(Youtube)</h3>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/2iaPuUFIyMo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+    <h3>(Vimeo)</h3>
+
+    <iframe src="https://player.vimeo.com/video/508795048?h=0fa45d4b9a" width="640" height="360" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
+    <p><a href="https://vimeo.com/508795048"></a> from <a href="https://vimeo.com/user132915136"></a> <a href="https://vimeo.com"></a>.</p>
+
+
+
+
 </body>
 </html>
