--- a/Primeiros Passos/010 - links/index.html
+++ b/Primeiros Passos/010 - links/index.html
@@ -17,13 +17,15 @@
     </li><h2>Link externo </h2><ul>
         
         <p>Acessando com link externo ultilize: &lt; a href="http://" target="_blank" rel="noopener noreferrer">&lt;/a &gt; </p>
-        <body>Acessando meu github <a href="https://github.com/RuanSampaio-code" target="_blank" rel="external"> Aqui. </a></body> <em>Obs:nesse caso clicando aqui levará para um link externo.</em>
+        <body>Acessando meu github 
+            <a href="https://github.com/RuanSampaio-code" target="_blank" rel="external"> Aqui. </a></body> <em>Obs:nesse caso clicando aqui levará para um link externo.</em>
     </ul>
     <h2>Links externos</h2>
     <p>Está é a primeira pagina do site. Clique <a href="pag2.html" rel="next">Aqui </a> para ir pra segunda página</p>
     <h2>Links para Download</h2>
     <ul>
-        <li><a href="livros/certifica quarentena dev.pdf" download="certificado quarentena dev.pdf" type="aplication/pdf">Baixar certificado </a></li>
+        <li>
+            <a href="livros/certifica quarentena dev.pdf" download="certificado quarentena dev.pdf" type="aplication/pdf">Baixar certificado </a></li>
     </ul>
 </body>
 </html>
