--- a/Primeiros Passos/Desafios/d002/pagina2/pagina3.html
+++ b/Primeiros Passos/Desafios/d002/pagina2/pagina3.html
@@ -10,6 +10,6 @@
     <h1>Album 2 do Guns N Roses</h1>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/isCh4kCeNYU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     
-    <a href="../d002.html" target="_blank" rel="noopener noreferrer" ></a>
+    <a href="../d002.html" target="_blank" rel="noopener noreferrer" > <img width="50" src="../imagens/inconedevoltar.jpg" alt=""></a>
 </body>
 </html>
