--- a/Primeiros passos (CSS3)/estilosinline.html
+++ b/Primeiros passos (CSS3)/estilosinline.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>CSS inline</title>
 </head>
-<body>
+<body style="background-color: darkgrey;">
+    <h1>Estilo css Inline</h1>
+    <p>O estilo css inline significa utilizar as tags css nas mesmas linhas que as tags de HTML </p>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Esse nam at possimus officia deserunt quia mollitia ratione alias, doloribus sint in totam maxime culpa eligendi quod debitis. Laudantium, eaque nulla!</p>
     
 </body>
 </html>
