--- a/Primeiros passos (CSS3)/014 - Estilos Internos/Estilosinternos.html
+++ b/Primeiros passos (CSS3)/014 - Estilos Internos/Estilosinternos.html
@@ -5,16 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSS inline</title>
+    <style>
+        body{
+            background-color: cadetblue;
+            font-family: Arial, Helvetica, sans-serif;
+            font-size: 20px;
+        }
+    </style>
 </head>
-<body style="background-color: rgb(114, 217, 224);">
+<body>
 
-    <h1 style="font-family: Verdana, Geneva, Tahoma, sans-serif; color: maroon;">Estilo css Inline</h1>
-    <p style="font-size: 20px; font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;">O estilo css Inline significa utilizar as tags css nas mesmas linhas que as tags de HTML 
+    <h1>Estilo CSS3 Internos ou Locais</h1>
+    <p >O estilo css Inline significa utilizar as tags css nas mesmas linhas que as tags de HTML 
     </p>
 
     <h2>Exemplo abaixo com tags para paragrafo alinhado:</h2>
 
-    <p style="font-size: 20px; font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; text-align: justify;" >Lorem ipsum, dolor sit amet consectetur adipisicing elit. Esse nam at possimus officia deserunt quia mollitia ratione alias, doloribus sint in totam maxime culpa eligendi quod debitis. Laudantium, eaque nulla!
+    <p >Lorem ipsum, dolor sit amet consectetur adipisicing elit. Esse nam at possimus officia deserunt quia mollitia ratione alias, doloribus sint in totam maxime culpa eligendi quod debitis. Laudantium, eaque nulla!
     </p>
 </body>
 </html>
