--- a/Primeiros passos (CSS3)/014 - Estilos Internos/Estilosinternos.html
+++ b/Primeiros passos (CSS3)/014 - Estilos Internos/Estilosinternos.html
@@ -11,15 +11,25 @@
             font-family: Arial, Helvetica, sans-serif;
             font-size: 20px;
         }
+        h1 {
+            color: darkblue;
+        }
+        h2 {
+            color: rgb(8, 37, 37);
+
+        }
+    
     </style>
 </head>
 <body>
 
     <h1>Estilo CSS3 Internos ou Locais</h1>
-    <p >O estilo css Inline significa utilizar as tags css nas mesmas linhas que as tags de HTML 
-    </p>
-
-    <h2>Exemplo abaixo com tags para paragrafo alinhado:</h2>
+    <p>Abaixo simulação de sumario</p>
+    <h1>1 - Introdução</h1>
+    <h2>1.1 Introdução secundária</h2>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illo molestiae excepturi voluptatum cum ducimus sed maxime totam soluta animi distinctio nulla, nostrum vero eum possimus ratione est, a dignissimos. Qui!</p>
+    <h1>2 - Desenvolvimento</h1>
+    <h2>211 Desenvolvimento secundário</h2>
 
     <p >Lorem ipsum, dolor sit amet consectetur adipisicing elit. Esse nam at possimus officia deserunt quia mollitia ratione alias, doloribus sint in totam maxime culpa eligendi quod debitis. Laudantium, eaque nulla!
     </p>
