--- a/Primeiros passos (CSS3)/014 - Estilos Internos/Estilosinternos.html
+++ b/Primeiros passos (CSS3)/014 - Estilos Internos/Estilosinternos.html
@@ -16,7 +16,9 @@
         }
         h2 {
             color: rgb(8, 37, 37);
-
+        }
+        p{
+            text-align: justify;
         }
     
     </style>
