--- a/Primeiros passos (CSS3)/014 - Estilos Internos/Estilosinternos.html
+++ b/Primeiros passos (CSS3)/014 - Estilos Internos/Estilosinternos.html
@@ -35,5 +35,6 @@
 
     <p >Lorem ipsum, dolor sit amet consectetur adipisicing elit. Esse nam at possimus officia deserunt quia mollitia ratione alias, doloribus sint in totam maxime culpa eligendi quod debitis. Laudantium, eaque nulla!
     </p>
+    <a href="pagina2.html" target="_self"> Ir para pagina 2 </a>
 </body>
 </html>
