--- a/Primeiros passos (CSS3)/015 - Estilo Externos/pagina2.html
+++ b/Primeiros passos (CSS3)/015 - Estilo Externos/pagina2.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PÁGINA 2</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <H1>2ª PAGINA</H1>
 <H2>Teste de CSS Externo</H2>
