--- a/Primeiros passos (CSS3)/015 - Estilo Externos/Estilosexternos.html
+++ b/Primeiros passos (CSS3)/015 - Estilo Externos/Estilosexternos.html
@@ -4,24 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CSS inline</title>
-    <style>
-        body{
-            background-color: cadetblue;
-            font-family: Arial, Helvetica, sans-serif;
-            font-size: 18px;
-        }
-        h1 {
-            color: darkblue;
-        }
-        h2 {
-            color: rgb(8, 37, 37);
-        }
-        p{
-            text-align: justify;
-        }
-    
-    </style>
+    <title>CSS Externo</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
