--- a/Primeiros passos (HTML)/001 - Paragrafos e Quebras de texto/001 - Paragrafos e quebras de linha.html
+++ b/Primeiros passos (HTML)/001 - Paragrafos e Quebras de texto/001 - Paragrafos e quebras de linha.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Aprendendo a colocar paragráfos </title>
     
 <body>
     <h1> Paragrafos e quebras de linhas </h1>
