Update 002 - Simbolos e emojis.html

--- a/Primeiros passos (HTML)/002 - Simbolos e emojis/002 - Simbolos e emojis.html
+++ b/Primeiros passos (HTML)/002 - Simbolos e emojis/002 - Simbolos e emojis.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Adicinando simbolos e emojis</title>
+    <title>Adicinando símbolos e emojis</title>
 </head>
 <body>
     <h1>Adicinando simbolos e emoji</h1>
-    <p> Para colocar símbolos basta digitar: & e o nome do simbolo<br> 
+    <p> Para colocar símbolos basta digitar: & e o nome do simbolo com ; no final<br> 
         &reg;
         &copy;
         &uparrow;
