Update 002 - Simbolos e emojis.html

--- a/Primeiros passos (HTML)/002 - Simbolos e emojis/002 - Simbolos e emojis.html
+++ b/Primeiros passos (HTML)/002 - Simbolos e emojis/002 - Simbolos e emojis.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Adicinando simbolos e emoji</h1>
+    <h2>Símbolos</h2>
     <p> Para colocar símbolos basta digitar: & e o nome do simbolo com ; no final<br> 
         &reg;
         &copy;
