--- a/Primeiros passos (HTML)/004 - Adicionando Favicon/imagens/adicionando favicon.html
+++ b/Primeiros passos (HTML)/004 - Adicionando Favicon/imagens/adicionando favicon.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1>Favicon logo acima</h1>
-    <p>Foi utilizado a tag "link"</p>
+    <p>Foi utilizado a tag "link rel"</p>
     
 </body>
 </html>
