--- a/Primeiros passos (HTML)/007 - Formatação de texto/formataçãodetexto.html
+++ b/Primeiros passos (HTML)/007 - Formatação de texto/formataçãodetexto.html
@@ -14,7 +14,7 @@ Está frase tem um termo em negrit:o<strong> Primeiro exemplo</strong> (Semantic
     <p>2ª Forma (não sematica) aplicando tag &lt;b&gt;   
     </p>
    Está frase tem um termo negrito <b>Segundo exemplo</b> (não semântico)
-    <h2> ITALICO</h2>
+    <h2> ITÁLICO</h2>
     <p> Temos 2 formas para deixar o texto em ITALICA:</p> 
     <p>1ªForma não semântica</p>
     <P> <i>Termo em italico</i></P>
