--- a/Primeiros passos (HTML)/Desafios/d001/d01.html
+++ b/Primeiros passos (HTML)/Desafios/d001/d01.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Ola a todos meu nome é José Ruan</h1>
-    <p>Atuamente estou fazendo o curso de Ciência e tecnologia com enfase em engenharia da computação</p>
+    <p style="font-family: 'Times New Roman', Times, serif;">Atuamente estou fazendo o curso de Ciência e tecnologia com enfase em engenharia da computação</p>
     <p>As linguagens que atualmente estou apredendo são: </p>
     <ul>
         <li><abbr title="Linguagem de marcação de texto"> HTML </Html></abbr></li>
