--- a/Primeiros passos (CSS3)/016 - Psicologia das cores/psicologiadascores.html
+++ b/Primeiros passos (CSS3)/016 - Psicologia das cores/psicologiadascores.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Psicologia das Cores</h1>
-    <p> O conjunto de Cores em harmônia é intrisicamenete ligado as nossas escolhas</p>
+    <p> O conjunto de Cores em harmônia é intrisicamenete ligado as nossas escolhas.</p>
     
 </body>
 </html>
