--- a/Primeiros passos (CSS3)/016 - Psicologia das cores/psicologiadascores.html
+++ b/Primeiros passos (CSS3)/016 - Psicologia das cores/psicologiadascores.html
@@ -9,6 +9,7 @@
 <body>
     <h1>Psicologia das Cores</h1>
     <p> O conjunto de Cores em harmônia é intrisicamenete ligado as nossas escolhas.</p>
+    <p>as cores transmitem emoções</p>
     
 </body>
 </html>
