--- a/Primeiros passos (CSS3)/016 - Psicologia das cores/psicologiadascores.html
+++ b/Primeiros passos (CSS3)/016 - Psicologia das cores/psicologiadascores.html
@@ -4,12 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Cores</title>
 </head>
 <body>
     <h1>Psicologia das Cores</h1>
     <p> O conjunto de Cores em harmônia é intrisicamenete ligado as nossas escolhas.</p>
     <p> As cores transmitem emoções.</p>
+    <p>Segue o link para mais assuntos sobre cores
+        <a href="https://github.com/RuanSampaio-code/html-css/blob/master/aulas-pdf/13%20-%20Cores.pdf" type="external"> Clique aqui</a>
+    </p>
     
 </body>
 </html>
