--- a/Primeiros passos (CSS3)/016 - Psicologia das cores/psicologiadascores.html
+++ b/Primeiros passos (CSS3)/016 - Psicologia das cores/psicologiadascores.html
@@ -11,8 +11,7 @@
     <p> O conjunto de Cores em harmônia é intrisicamenete ligado as nossas escolhas.</p>
     <p> As cores transmitem emoções.</p>
     <p>Segue o link para mais assuntos sobre cores
-        <a href="https://github.com/RuanSampaio-code/html-css/blob/master/aulas-pdf/13%20-%20Cores.pdf" type="external"> Clique aqui</a>
-    </p>
+        <a href="https://github.com/RuanSampaio-code/html-css/blob/master/aulas-pdf/13%20-%20Cores.pdf" target="_blank" rel="external"></a>    </p>
     
 </body>
 </html>
