--- a/Primeiros passos (CSS3)/016 - Psicologia das cores/psicologiadascores.html
+++ b/Primeiros passos (CSS3)/016 - Psicologia das cores/psicologiadascores.html
@@ -8,10 +8,12 @@
 </head>
 <body>
     <h1>Psicologia das Cores</h1>
-    <p> O conjunto de Cores em harmônia é intrisicamenete ligado as nossas escolhas.</p>
-    <p> As cores transmitem emoções.</p>
-    <p>Segue o link para mais assuntos sobre cores
-        <a href="https://github.com/RuanSampaio-code/html-css/blob/master/aulas-pdf/13%20-%20Cores.pdf" target="_blank" rel="external"> Clique Aqui </a>    </p>
+    <ul>
+        <p> <li>O conjunto de Cores em harmônia é intrisicamenete ligado as nossas escolhas.</li></p>
+        <p> As cores transmitem emoções.</p>
+        <p>Segue o link para mais assuntos sobre cores
+            <a href="https://github.com/RuanSampaio-code/html-css/blob/master/aulas-pdf/13%20-%20Cores.pdf" target="_blank" rel="external"> Clique Aqui </a>    </p>
+    </ul>
     
 </body>
 </html>
