--- a/Primeiros passos (CSS3)/016 - Psicologia das cores/psicologiadascores.html
+++ b/Primeiros passos (CSS3)/016 - Psicologia das cores/psicologiadascores.html
@@ -11,8 +11,10 @@
     <ul>
         <p> <li>O conjunto de Cores em harmônia é intrisicamenete ligado as nossas escolhas.</li></p>
         <p><li> As cores transmitem emoções.</li></p>
-        <p>Segue o link para mais assuntos sobre cores
-            <a href="https://github.com/RuanSampaio-code/html-css/blob/master/aulas-pdf/13%20-%20Cores.pdf" target="_blank" rel="external"> Clique Aqui </a>    </p>
+        <p><li>
+            Segue o link para mais assuntos sobre cores
+                <a href="https://github.com/RuanSampaio-code/html-css/blob/master/aulas-pdf/13%20-%20Cores.pdf" target="_blank" rel="external"> Clique Aqui </a>
+        </li>    </p>
     </ul>
     
 </body>
