--- a/Primeiros passos (CSS3)/016 - Psicologia das cores/psicologiadascores.html
+++ b/Primeiros passos (CSS3)/016 - Psicologia das cores/psicologiadascores.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Psicologia das Cores</h1>
     <ul>
-        <p s> <li>O conjunto de Cores em harmônia é intrisicamenete ligado as nossas escolhas.</li></p>
+        <p> <li>O conjunto de Cores em harmônia é intrisicamenete ligado as nossas escolhas.</li></p>
         <p><li> As cores transmitem emoções.</li></p>
         <p><li>
             Segue o link para mais assuntos sobre cores
